--- a/hudi-sync/hudi-hive-sync/pom.xml
+++ b/hudi-sync/hudi-hive-sync/pom.xml
@@ -114,6 +114,10 @@
           <groupId>org.slf4j</groupId>
           <artifactId>slf4j-log4j12</artifactId>
         </exclusion>
+        <exclusion>
+          <groupId>io.hops.hive</groupId>
+          <artifactId>hive-llap-server</artifactId>
+        </exclusion>
       </exclusions>
     </dependency>
     <dependency>
