--- a/packaging/hudi-flink-bundle/pom.xml
+++ b/packaging/hudi-flink-bundle/pom.xml
@@ -36,7 +36,7 @@
     <javax.servlet.version>3.1.0</javax.servlet.version>
     <!-- override to be same with flink 1.12.2 -->
     <parquet.version>1.11.1</parquet.version>
-    <hive.version>2.3.1</hive.version>
+    <!-- <hive.version>2.3.1</hive.version> -->
     <thrift.version>0.9.3</thrift.version>
   </properties>
 
@@ -677,7 +677,7 @@
     <profile>
       <id>flink-bundle-shade-hive1</id>
       <properties>
-        <hive.version>1.1.0</hive.version>
+        <!-- <hive.version>1.1.0</hive.version> -->
         <thrift.version>0.9.2</thrift.version>
         <flink.bundle.hive.scope>compile</flink.bundle.hive.scope>
       </properties>
@@ -685,7 +685,7 @@
     <profile>
       <id>flink-bundle-shade-hive2</id>
       <properties>
-        <hive.version>2.3.1</hive.version>
+        <!-- <hive.version>2.3.1</hive.version> -->
         <flink.bundle.hive.scope>compile</flink.bundle.hive.scope>
       </properties>
       <dependencies>
@@ -700,7 +700,7 @@
     <profile>
       <id>flink-bundle-shade-hive3</id>
       <properties>
-        <hive.version>3.1.2</hive.version>
+        <!-- <hive.version>3.1.2</hive.version> -->
         <flink.bundle.hive.scope>compile</flink.bundle.hive.scope>
       </properties>
       <dependencies>
