--- a/hudi-spark-datasource/hudi-spark2/pom.xml
+++ b/hudi-spark-datasource/hudi-spark2/pom.xml
@@ -89,13 +89,13 @@
               <goal>compile</goal>
             </goals>
           </execution>
-          <execution>
+          <!--execution>
             <id>scala-test-compile</id>
             <phase>process-test-resources</phase>
             <goals>
               <goal>testCompile</goal>
             </goals>
-          </execution>
+          </execution-->
         </executions>
       </plugin>
       <plugin>
