--- a/hudi-spark-datasource/hudi-spark2/pom.xml
+++ b/hudi-spark-datasource/hudi-spark2/pom.xml
@@ -17,12 +17,12 @@
   <parent>
     <artifactId>hudi-spark-datasource</artifactId>
     <groupId>io.hops.hudi</groupId>
-    <version>0.10.0.2</version>
+    <version>0.10.0.3</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>hudi-spark2_${scala.binary.version}</artifactId>
-  <version>0.10.0.2</version>
+  <version>0.10.0.3</version>
 
   <name>hudi-spark2_${scala.binary.version}</name>
   <packaging>jar</packaging>
@@ -89,13 +89,13 @@
               <goal>compile</goal>
             </goals>
           </execution>
-          <!--execution>
+          <execution>
             <id>scala-test-compile</id>
             <phase>process-test-resources</phase>
             <goals>
               <goal>testCompile</goal>
             </goals>
-          </execution-->
+          </execution>
         </executions>
       </plugin>
       <plugin>
