--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
   <groupId>io.hops.hudi</groupId>
   <artifactId>hudi</artifactId>
   <packaging>pom</packaging>
-  <version>0.10.0.2</version>
+  <version>0.10.0.3</version>
   <description>Apache Hudi brings stream style processing on big data</description>
   <url>https://github.com/apache/hudi</url>
   <name>Hudi</name>
@@ -50,9 +50,9 @@
     <module>packaging/hudi-presto-bundle</module>
     <module>packaging/hudi-utilities-bundle</module>
     <module>packaging/hudi-timeline-server-bundle</module>
-    <!-- <module>docker/hoodie/hadoop</module>
+    <module>docker/hoodie/hadoop</module>
     <module>hudi-integ-test</module>
-    <module>packaging/hudi-integ-test-bundle</module> -->
+    <module>packaging/hudi-integ-test-bundle</module>
     <module>hudi-examples</module>
     <module>hudi-flink</module>
     <module>hudi-kafka-connect</module>
